# tech-challenges-post-tech-fiap

./: .gitignore  README.md  pyproject.toml
fase-01/: README.md  Relatorio Resumido.md  app.py  main.py  tech-challenge-01.ipynb
fase-01/dados/: model.pkl
fase-02/: Documento.md  README.md  app.py  chatgpt.py  colaboradores.json  projetos.json
fase-02/dados/: colaboradores.json  projetos.json
fase-02/docs/: Documento.md
fase-03/: agents.ipynb  app.py  rag.md  rag.py  readme.md  report.md
fase-03/docs/: relatorio.md
fase-03/scripts/: 0-prepare-data.py  01-prepare-data-finetuning-1.py  02-prepare-data-finetuning-2.py  04-fine-tuning-qwen2.5-7B.ipynb  05-fine-tuning-llama-3.2-3B.ipynb
fase-04/: app.py  crop_video.py  detector.py  emotion.py  pose.py  pose2.py  pose3.py  pose4.py  pose5.py  pose_detection.py  readme.md  report.py
fase-05/: README.md  app.py
