[project]
name = "tech-challenges-post-tech-fiap"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "deap>=1.4.1",
    "ipykernel>=6.29.5",
    "langchain>=0.3.20",
    "langchain-ollama>=0.2.3",
    "matplotlib>=3.9.2",
    "nbconvert>=7.16.4",
    "numpy>=2.1.2",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "scikit-learn>=1.5.2",
    "seaborn>=0.13.2",
    "streamlit>=1.39.0",
    "langchain-community>=0.3.19",
    "faiss-cpu>=1.10.0",
    "langchain-openai>=0.3.8",
    "langgraph>=0.3.11",
    "langchain-nomic>=0.1.4",
    "sentence-transformers>=3.4.1",
]
